# agent-prompt-sections

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_prompt_sections/: __init__.py  core.py
tests/: __init__.py  test_agent_prompt_sections.py
