[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-prompt-sections"
version = "0.1.1"
description = "Compose LLM system prompts from ordered named sections"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["agent", "llm", "prompt", "system-prompt", "sections", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
# Tests run on the standard-library ``unittest`` runner and need no extra
# dependencies; ``ruff`` is only used for linting/formatting in CI.
dev = ["ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_prompt_sections"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
